[package]
name = "libra_benchmark"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
clap = "2.33.0"
futures = "0.1.28"
grpcio = { version = "0.4.4", default-features = false, features = ["protobuf-codec"] }
lazy_static = "1.2.0"
protobuf = "~2.7"
rand = "0.6.5"
regex = { version = "1.3.0", default-features = false, features = ["std", "perf"] }
structopt = "0.2.15"
num_cpus = "1.10.1"
walkdir = "2.2.9"

libra_admission_control_proto = { path = "../admission_control/admission_control_proto" }
libra_client = { path = "../client" }
libra_config = { path = "../config" }
failure = { package = "libra_failure_ext", path = "../common/failure_ext" }
libra_generate_keypair = { path = "../config/generate_keypair" }
libra_wallet = { path = "../client/libra_wallet" }
libra_swarm = { path = "../libra_swarm" }
libra_logger = { path = "../common/logger" }
libra_metrics = { path = "../common/metrics" }
libra_crypto = { path = "../crypto/crypto" }
libra_proto_conv = { path = "../common/proto_conv" }
rusty-fork = "0.2.1"
libra_tools = { path = "../common/tools" }
libra_types = { path = "../types" }
libra_transaction_builder = { path = "../language/transaction_builder" }

[dev-dependencies]
libra_crypto = { path = "../crypto/crypto", features = ["testing"] }

[features]
default = []
testing = ["libra_crypto/testing", "libra_swarm/testing"]
