[package]
name = "benchmark"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
description = "Libra benchmark"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = "1.2.0"
prost = "0.5.0"
rand = "0.6.5"
regex = { version = "1.3.0", default-features = false, features = ["std", "perf"] }
structopt = "0.3.2"
num_cpus = "1.10.1"
walkdir = "2.2.9"

admission-control-proto = { path = "../admission_control/admission-control-proto" }
client = { path = "../client" }
config = { path = "../config" }
failure = { package = "failure_ext", path = "../common/failure_ext" }
generate-keypair = { path = "../config/generate-keypair" }
libra_wallet = { path = "../client/libra_wallet" }
libra-swarm = { path = "../libra-swarm" }
libra-logger = { path = "../common/logger" }
libra-metrics = { path = "../common/metrics" }
crypto = { path = "../crypto/crypto" }
rusty-fork = "0.2.1"
libra-tools = { path = "../common/tools" }
libra-types = { path = "../types" }
transaction-builder = { path = "../language/transaction-builder" }

[dev-dependencies]
crypto = { path = "../crypto/crypto", features = ["testing"] }

[features]
default = []
testing = ["crypto/testing", "libra-swarm/testing"]
