[package]
name = "benchmark"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
description = "Libra benchmark"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
lazy_static = "1.2.0"
prost = "0.5.0"
rand = "0.6.5"
regex = { version = "1.3.0", default-features = false, features = ["std", "perf"] }
structopt = "0.3.2"
num_cpus = "1.10.1"
walkdir = "2.2.9"

admission-control-proto = { path = "../admission_control/admission-control-proto", version = "0.1.0" }
client = { path = "../client", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0" }
failure = { package = "libra-failure-ext", path = "../common/failure-ext", version = "0.1.0" }
generate-keypair = { path = "../config/generate-keypair", version = "0.1.0" }
libra-wallet = { path = "../client/libra_wallet", version = "0.1.0" }
libra-swarm = { path = "../libra-swarm", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["cloneable-private-keys"] }
rusty-fork = "0.2.1"
libra-tools = { path = "../common/tools", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0", features = ["fuzzing"] }
transaction-builder = { path = "../language/transaction-builder", version = "0.1.0" }
