[package]
name = "client"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra client"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
chrono = "0.4.7"
futures = "0.1.28"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
hex = "0.3.2"
itertools = "0.8.0"
proptest = "0.9.2"
rustyline = "5.0.3"
rust_decimal = "1.0.2"
num-traits = "0.2"
reqwest = { version = "0.9.19", default-features = false }
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.2"

admission-control-proto = { version = "0.1.0", path = "../admission_control/admission-control-proto" }
config = { path = "../config" }
crash-handler = { path = "../common/crash-handler" }
crypto = { path = "../crypto/crypto" }
failure = { package = "failure_ext", path = "../common/failure_ext" }
lcs = { path = "../common/lcs", package = "libra-canonical-serialization" }
libra_wallet = { path = "./libra_wallet" }
libra-logger =  { path = "../common/logger" }
metrics = { path = "../common/metrics" }
libra-types = { path = "../types" }
libra-tools = { path = "../common/tools/" }
transaction_builder = { path = "../language/transaction_builder" }

[dev-dependencies]
crypto = { path = "../crypto/crypto", features = ["testing"] }
libra-types = { path = "../types", features = ["testing"]}

[features]
default = []
testing = ["libra-types/testing", "crypto/testing"]
