[package]
name = "libra-config"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-config"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
get_if_addrs = { version = "0.5.3", default-features = false }
mirai-annotations = "1.7.0"
parity-multiaddr = { version = "0.8.0", default-features = false }
rand = "0.7.3"
serde = { version = "1.0.106", features = ["rc"], default-features = false }
log = { version = "0.4.8", features = ["serde"] }
thiserror = "1.0"
toml = { version = "0.5.3", default-features = false }

lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }

[features]
default = []
fuzzing = ["libra-crypto/fuzzing", "libra-types/fuzzing"]
