[package]
name = "diem-config"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem diem-config"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
get_if_addrs = { version = "0.5.3", default-features = false }
log = { version = "0.4.14", features = ["serde"] }
mirai-annotations = "1.10.1"
rand = "0.8.2"
serde = { version = "1.0.123", features = ["rc"], default-features = false }
serde_yaml = "0.8.15"
thiserror = "1.0.23"


bcs = "0.1.2"
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
diem-global-constants = { path = "../config/global-constants", version = "0.1.0"}
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-network-address = { path = "../network/network-address", version = "0.1.0" }
diem-network-address-encryption = { path = "management/network-address-encryption", version = "0.1.0" }
diem-secure-storage = { path = "../secure/storage", version = "0.1.0" }
diem-temppath = { path = "../common/temppath", version = "0.1.0" }
diem-types = { path = "../types", version = "0.1.0" }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }

[dev-dependencies]
diem-crypto = { path = "../crypto/crypto", version = "0.1.0", features = ["fuzzing"] }

[features]
default = []
fuzzing = ["diem-crypto/fuzzing", "diem-types/fuzzing"]
testing = []
