[package]
name = "diem-config"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem diem-config"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
get_if_addrs = { version = "0.5.3", default-features = false }
log = { version = "0.4.14", features = ["serde"] }
mirai-annotations = "1.10.1"
rand = "0.8.3"
serde = { version = "1.0.124", features = ["rc"], default-features = false }
serde_yaml = "0.8.17"
thiserror = "1.0.24"

bcs = "0.1.2"
diem-crypto = { path = "../crypto/crypto" }
diem-crypto-derive = { path = "../crypto/crypto-derive" }
diem-global-constants = { path = "./global-constants"}
diem-logger = { path = "../common/logger" }
diem-network-address-encryption = { path = "management/network-address-encryption" }
diem-secure-storage = { path = "../secure/storage" }
diem-temppath = { path = "../common/temppath" }
diem-types = { path = "../types" }
diem-workspace-hack = { path = "../common/workspace-hack" }
short-hex-str = { path = "../common/short-hex-str" }

[dev-dependencies]
diem-crypto = { path = "../crypto/crypto", features = ["fuzzing"] }

[features]
default = []
fuzzing = ["diem-crypto/fuzzing", "diem-types/fuzzing"]
testing = []
