[package]
name = "consensus"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra consensus"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.40"
byteorder = { version = "1.3.4", default-features = false }
bytes = "0.5.6"
fail = "0.4.0"
futures = "0.3.5"
itertools = { version = "0.9.0", default-features = false }
mirai-annotations = { version = "1.10.1", default-features = false }
num-derive = { version = "0.3.2", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
once_cell = "1.4.1"
proptest = { version = "0.10.1", optional = true }
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0.115", default-features = false }
serde_json = "1.0.57"
termion = { version = "1.5.5", default-features = false }
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["full"] }

channel = { path = "../common/channel", version = "0.1.0" }
consensus-types = { path = "consensus-types", version = "0.1.0", default-features = false }
crash-handler = { path = "../common/crash-handler", version = "0.1.0" }
execution-correctness = { path = "../execution/execution-correctness", version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
executor-types = { path = "../execution/executor-types", version = "0.1.0" }
lcs = { path = "../common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-config = { path = "../config", version = "0.1.0" }
libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-logger = { path = "../common/logger", version = "0.1.0" }
libra-mempool = { path = "../mempool", version = "0.1.0" }
libra-metrics = { path = "../common/metrics", version = "0.1.0" }
libra-secure-storage = { path = "../secure/storage", version = "0.1.0" }
libra-temppath = { path = "../common/temppath", version = "0.1.0" }
libra-time = { path = "../common/time", version = "0.1.0" }
libra-trace = { path = "../common/trace", version = "0.1.0" }
libra-types = { path = "../types", version = "0.1.0" }
libra-vm = { path = "../language/libra-vm", version = "0.1.0" }
libra-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
network = { path = "../network", version = "0.1.0" }
safety-rules = { path = "safety-rules", version = "0.1.0" }
state-synchronizer = { path = "../state-synchronizer", version = "0.1.0" }
schemadb = { path = "../storage/schemadb", version = "0.1.0" }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }

[dev-dependencies]
proptest = "0.10.1"
tempfile = "3.1.0"

consensus-types = { path = "consensus-types", version = "0.1.0", default-features = false, features = ["fuzzing"] }
executor-test-helpers = { path = "../execution/executor-test-helpers", version = "0.1.0" }
libra-config = { path = "../config", version = "0.1.0", features = ["fuzzing"] }
libra-mempool = { path = "../mempool", version = "0.1.0", features = ["fuzzing"] }
safety-rules = { path = "safety-rules", version = "0.1.0", features = ["testing"] }
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }
vm-validator = { path = "../vm-validator", version = "0.1.0" }

[features]
default = []
fuzzing = ["proptest", "consensus-types/fuzzing", "libra-config/fuzzing", "libra-crypto/fuzzing", "libra-mempool/fuzzing", "libra-types/fuzzing", "safety-rules/testing"]
failpoints = ["fail/failpoints"]
