[package]
name = "consensus"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem consensus"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
byteorder = { version = "1.4.2", default-features = false }
bytes = "1.0.1"
fail = "0.4.0"
futures = "0.3.12"
itertools = { version = "0.10.0", default-features = false }
mirai-annotations = { version = "1.10.1", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
once_cell = "1.4.1"
proptest = { version = "0.10.1", optional = true }
rand = { version = "0.8.2", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_json = "1.0.61"
termion = { version = "1.5.6", default-features = false }
thiserror = "1.0.23"
tokio = { version = "1.1.1", features = ["full"] }

channel = { path = "../common/channel", version = "0.1.0" }
consensus-types = { path = "consensus-types", version = "0.1.0", default-features = false }
execution-correctness = { path = "../execution/execution-correctness", version = "0.1.0" }
executor = { path = "../execution/executor", version = "0.1.0" }
executor-types = { path = "../execution/executor-types", version = "0.1.0" }
bcs = "0.1.2"
diem-config = { path = "../config", version = "0.1.0" }
diem-crypto = { path = "../crypto/crypto", version = "0.1.0" }
diem-logger = { path = "../common/logger", version = "0.1.0" }
diem-mempool = { path = "../mempool", version = "0.1.0" }
diem-metrics = { path = "../common/metrics", version = "0.1.0" }
diem-infallible = { path = "../common/infallible", version = "0.1.0" }
diem-secure-storage = { path = "../secure/storage", version = "0.1.0" }
diem-temppath = { path = "../common/temppath", version = "0.1.0" }
diem-trace = { path = "../common/trace", version = "0.1.0" }
diem-types = { path = "../types", version = "0.1.0" }
diem-vm = { path = "../language/diem-vm", version = "0.1.0" }
diem-workspace-hack = { path = "../common/workspace-hack", version = "0.1.0" }
network = { path = "../network", version = "0.1.0" }
safety-rules = { path = "safety-rules", version = "0.1.0" }
state-sync = { path = "../state-sync", version = "0.1.0" }
schemadb = { path = "../storage/schemadb", version = "0.1.0" }
storage-interface = { path = "../storage/storage-interface", version = "0.1.0" }
subscription-service = { path = "../common/subscription-service", version = "0.1.0" }

[dev-dependencies]
proptest = "0.10.1"
tempfile = "3.2.0"

consensus-types = { path = "consensus-types", version = "0.1.0", default-features = false, features = ["fuzzing"] }
executor-test-helpers = { path = "../execution/executor-test-helpers", version = "0.1.0" }
diem-config = { path = "../config", version = "0.1.0", features = ["fuzzing"] }
diem-mempool = { path = "../mempool", version = "0.1.0", features = ["fuzzing"] }
safety-rules = { path = "safety-rules", version = "0.1.0", features = ["testing"] }
vm-genesis = { path = "../language/tools/vm-genesis", version = "0.1.0" }
vm-validator = { path = "../vm-validator", version = "0.1.0" }

[features]
default = []
fuzzing = ["proptest", "consensus-types/fuzzing", "diem-config/fuzzing", "diem-crypto/fuzzing", "diem-mempool/fuzzing", "diem-types/fuzzing", "safety-rules/testing"]
failpoints = ["fail/failpoints"]
